# rtsan

./: .gitignore  .gitmodules  Contributing.md  Makefile  README.md  rtsan.h
.github/workflows/: makefile.yml  test.yml
doc/: review.md
docker/: Dockerfile  Dockerfile.dockerignore  README.md  release.sh
examples/: CMakeLists.txt  atomic_store_2d_coords.cpp  atomic_store_3d_coords.cpp  lambda_templated_invoke_big_capture.cpp  shared_ptr_assign.cpp  shared_ptr_atomic_assign.cpp  std_function_big_capture.cpp  std_function_small_capture.cpp  vector_construct.cpp
include/rtsan_standalone/: rtsan_standalone.h
